--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "stack-notifier",
   "version": "0.0.1",
   "description": "npm install",
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "express-handlebars": "^2.0.1",
+    "handlebars": "^4.0.3"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
